# python_cmd_tool

./: .gitignore  .pre-commit-config.yaml  README.md  cmdline_parser.py  conftest.py  downloader.py  main.py  parser.py  pyproject.toml
canonical/: conftest.py  main.py
canonical/modules/: cmdline_parser.py  parser.py
canonical/tests/: test_cmdline_parser.py  test_downloader.py
modules/: cmdline_parser.py  downloader.py  logger.py  parser.py
tests/: test_cmdline_parser.py  test_downloader.py  test_parser.py
